Fixed error when internet disconnected during login

--- a/QuickAuth/Settings.json
+++ b/QuickAuth/Settings.json
@@ -19,6 +19,10 @@
       "StatusText": "Requested Login",
       "StatusColor": "#D68113"
     },
+    "Error": {
+      "StatusText": "Error",
+      "StatusColor": "#C42323"
+    },
     "NoInternet": {
       "StatusText": "No Internet",
       "StatusColor": "#C42323"
